Fix overflow hiding text

--- a/css/application.css
+++ b/css/application.css
@@ -51,6 +51,7 @@ section {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  padding-bottom: 2px;
 }
 
 .menuitem .dashes {
